<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground">

    <TextView
        android:id="@+id/resultsScreenTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultsScreen"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/largeText"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/largeText"
        app:layout_constraintBottom_toTopOf="@+id/tryAgainBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultsScreenTV"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/tryAgainBtn"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/buttonColorRegular"
        android:text="@string/tryAgain"
        android:textColor="@color/white"
        android:textSize="@dimen/regularText"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/quitBtn"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/buttonColorRegular"
        android:text="@string/quit"
        android:textColor="@color/white"
        android:textSize="@dimen/regularText"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tryAgainBtn"
        app:layout_constraintVertical_bias="0.19999999" />
</androidx.constraintlayout.widget.ConstraintLayout>