<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/questionNumberTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questionNumber"
        android:textColor="@color/white"
        android:textSize="@dimen/regularText"
        app:layout_constraintBottom_toTopOf="@+id/definitionView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <RelativeLayout
        android:id="@+id/definitionView"
        android:layout_width="300dp"
        android:layout_height="275dp"
        android:background="@drawable/definition_background"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024">

        <TextView
            android:id="@+id/definitionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/definition"
            android:textColor="@color/white"
            android:textSize="@dimen/regularText" />
    </RelativeLayout>

    <Button
        android:id="@+id/term1Btn"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/buttonColorRegular"
        android:text="@string/termText"
        android:textColor="@color/white"
        android:textSize="@dimen/regularText"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/term2Btn"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/buttonColorRegular"
        android:text="@string/termText"
        android:textColor="@color/white"
        android:textSize="@dimen/regularText"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/term3Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/term1Btn"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/term3Btn"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/buttonColorRegular"
        android:text="@string/termText"
        android:textColor="@color/white"
        android:textSize="@dimen/regularText"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/term4Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/term2Btn"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/term4Btn"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/buttonColorRegular"
        android:text="@string/termText"
        android:textColor="@color/white"
        android:textSize="@dimen/regularText"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/nextBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/term3Btn"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/nextBtn"
        android:visibility="invisible"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/buttonColorRegular"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="@dimen/regularText"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/term4Btn"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>